# deep-learning-playground

./: .gitignore  README.md  gpt.ipynb
Micrograd - Andrej Karpathy/: micrograd.ipynb  own_micrograd.ipynb
SpaceNet - Segformer/: .gitignore  README.md  check_tiles.py  main.py  modal_train.py  pyproject.toml  spacenet_dataset.py  spacenet_train.py  train.ipynb  visualize_val_predictions.ipynb
grokking/: grokking.ipynb
makemore - ak/: makemore_3.ipynb  makemore_backpropninja.ipynb  makemore_mlp.ipynb  makemore_simple_count.ipynb
mnist/: mnist_mlp.ipynb
