[project]
name = "spacenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "albumentations>=2.0.8",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
